# shire

./: .gitignore  .rsync-filter  CNAME  Dockerfile  Procfile  README.md  archives.html  authors.html  categories.html  docker-compose.yaml  how-to-refactor-terraform-code-to-modules.html  index.html  marksthfun-loves-duckduckgo.html  pyproject.toml  requirements.txt  sample.env  tags.html
author/: ju-lin.html
category/: engineering.html  product.html
deploy/apps/instances/: README.md  app.yml  main.tf  variables.tf
deploy/apps/vpc/: README.md  main.tf  variables.tf
docs/: Makefile  cost.md  getting_started.md  introduction.html  monolithic-repo.html  pelicanconf.py  publishconf.py  ssl.html  tasks.py  tour.html
docs/content/: 2019-12-01-marksthfun.md  index.md
docs/content/2019/: 11-25-refactor-terraform-module.md
docs/content/docs/: introduction.md  monolithic-repo.md  ssl.md  tour.md
feeds/: all.atom.xml  engineering.atom.xml  product.atom.xml
infra/: .gitignore  README.md  backup.sh  main.tf  outputs.tf  requirements.txt  sample.env  setup.sh
infra/modules/dns/: main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/servers/: main.tf  variables.tf
infra/modules/vm/: main.tf  outputs.tf  variables.tf
infra/sys/: README.md  all-provision.yml  base-provision.yml  cert-provision.yml  db-provision.yml  digital_ocean.ini  dns-provision.yml  lb-provision.yml  lb.yml  mq-provision.yml  prom-provision.yml  requirements.yaml  web-provision.yml
scripts/: reset.py
shire/: app.py  core.py  errors.py  models.py  tasks.py  views.py  worker.py
shire/exts/: customer.py  mail.py  sub.py
shire/exts/customer/: __init__.py  core.py  manager.py  views.py
shire/exts/user/: user.py  (+2 more)
shire/templates/: about.html  base.html  change_password.html  confirm_signup.html  delete_mark.html  delete_thing.html  explore.html  faq.html  guide.html  index.html  login.html  privacy.html  profile.html  recent.html  register.html  reset_password.html  signup.html  signup_success.html  subscription_cancel.html  subscription_success.html  thing.html  things.html  tos.html  update_mark.html  widget_footer.html  widget_nav.html  widget_signup.html  widget_thing.html  widget_user.html
tag/: security.html
tests/: conftest.py  test_views.py
(+21 files in other folders)
