[tool.poetry]
name = "shire"
version = "0.1.0"
description = "The website for marksth.fun"
authors = ["soasme <soasme@gmail.com>"]
license = "AGPLv3"

[tool.poetry.dependencies]
python = "^3.6"
python-dotenv = "^0.10.3"
python-decouple = "^3.1"
flask = "^1.1.1"
flask-sqlalchemy = "^2.4.1"
flask-bcrypt = "^0.7.1"
gunicorn = "^19.9.0"
psycopg2 = "^2.8.3"
stripe = "^2.37.2"
whitenoise = "^4.1.4"
celery = "^4.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
webtest = "^2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
